--- a/metadata.yaml
+++ b/metadata.yaml
@@ -32,5 +32,6 @@ subjects:
 - !lcsh 'Religious literature, French -- History and criticism'
 - !lcsh 'Philosophy, French'
 - !lcc 'PQ'
+- GITenberg
 title: Philosophes et Écrivains Religieux
 url: http://www.gutenberg.org/ebooks/40694
